[package]
authors = ["Jakub Liska <pragmaxim@gmail.com>"]
description = "A stream adapter that broadcasts elements into parallel tasks and returns future."
license = "MIT OR Apache-2.0"
name = "broadcast-sink"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pragmaxim-com/broadcast-sink.rs"

[lib]
bench = false

[dependencies]
futures = { version = "0.3", features = ["async-await"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
pin-project-lite = "0.2"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }

[dev-dependencies.doc-comment]
version = "0.3"

[[bench]]
name = "broadcast_sink_benchmark"
harness = false
